--- a/src/index.css
+++ b/src/index.css
@@ -309,7 +309,7 @@ body {
     position: fixed;
     inset: 0;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 8;
+    z-index: 9998 !important;
     display: none;
   }
 
